@@ -86,10 +86,10 @@ typedef UV sword_t;
 #define SWORD_MASKBIT(bits)  (UVCONST(1) << ((bits) % SWORD_BITS))
 #define SWORD_CLEAR(s,bits)  s[bits/SWORD_BITS] &= ~SWORD_MASKBIT(bits)
 
-/* GCC 3.4-4.1 has broken 64-bit popcount.  4.2+ can generate awful code when
- * it doesn't have asm.  4.8 seems to generate similar code to the below.
- * Hence, only use the builtin when we have asm.
- * Compile with -march=native to get a big speedup on newer processors. */
+/* GCC 3.4 - 4.1 has broken 64-bit popcount.
+ * GCC 4.2+ can generate awful code when it doesn't have asm (GCC bug 36041).
+ * When the asm is present (e.g. compile with -march=native on a platform that
+ * has them, like Nahelem+), then it is almost as fast as the direct asm. */
 #if SWORD_BITS == 64
  #if defined(__POPCNT__) && defined(__GNUC__) && (__GNUC__> 4 || (__GNUC__== 4 && __GNUC_MINOR__> 1))
    #define bitcount(b)  __builtin_popcountll(b)
